# substreams-cosmos

./: Cargo.toml  README.md  buf.gen.yaml
core/: Cargo.toml  Makefile  buf.gen.yaml
core/src/: lib.rs
core/src/pb/: mod.rs  sf.cosmos.type.v2.rs
proto/sf/cosmos/type/v2/: block.proto
substreams-cosmos/: Cargo.toml
substreams-cosmos/src/: lib.rs
